@@ -6,6 +6,7 @@
   * Comment out call to error log in MA causing PHP warning (#790)
   * Change some mail links to help@geni.net (#572)
   * Project admins are made admins of newly created slices (#559)
+  * Email experimenters when they request to be a project lead (#760)
 
 == 2.1 ==
   * Revise handling of Google Analytics (#742)
